report aggregation and cleansing

--- a/wikipedia-filmcredits.ipynb
+++ b/wikipedia-filmcredits.ipynb
@@ -294,6 +294,50 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "# group data by extraction date, plus last minute filtering and formatting.\n",
+    "\n",
+    "import pathlib, pandas, datetime\n",
+    "\n",
+    "data_path = pathlib.Path.cwd() / 'data'\n",
+    "data_reports = [x for x in data_path.rglob('**/*') if x.suffix == '.csv']\n",
+    "\n",
+    "dataframe = pandas.DataFrame(columns=['location', 'timestamp'])\n",
+    "for x in data_reports:\n",
+    "    stamp = datetime.datetime.fromtimestamp(x.stat().st_mtime).strftime('%Y-%m-%d')\n",
+    "    dataframe.loc[len(dataframe)] = [str(x), str(stamp)]\n",
+    "\n",
+    "for x in sorted(dataframe.timestamp.unique()):\n",
+    "    daily = dataframe.copy()\n",
+    "    daily = daily.loc[daily.timestamp.isin([x])]\n",
+    "    daily_dataframe = pandas.DataFrame()\n",
+    "    for y in daily.location.unique():\n",
+    "        daily_dataframe = pandas.concat([daily_dataframe, pandas.read_csv(str(y))])\n",
+    "\n",
+    "    daily_dataframe['character_name'] = daily_dataframe['character_name'].str.split(':').str[0].str.strip()\n",
+    "    daily_dataframe = daily_dataframe.loc[daily_dataframe.wikidata_actor.str.contains('Q', na=False)]\n",
+    "\n",
+    "    save_path = pathlib.Path.cwd() / 'reports' / f'{str(x)}.csv'\n",
+    "    daily_dataframe.to_csv(str(save_path), index=False)\n",
+    "\n",
+    "    print(save_path.name, len(daily), len(daily_dataframe))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2021-12-06.csv 22 256\n",
+      "2021-12-07.csv 510 5982\n",
+      "2021-12-08.csv 637 7441\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
