--- a/wikipedia-filmcredits.ipynb
+++ b/wikipedia-filmcredits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "source": [
     "# sparql query a list of wikidata films and respective english wikipedia pages.\n",
     "\n",
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "267408\n"
+      "267410\n"
      ]
     },
     {
@@ -127,28 +127,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Q119889</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Aliens_in_the_Attic</td>\n",
+       "      <td>Q108946</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/A_Few_Good_Men</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Q121810</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Grown_Ups_(film)</td>\n",
+       "      <td>Q108586</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/The_Proposal_(20...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Q120626</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Song_of_the_Thin...</td>\n",
+       "      <td>Q109110</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Marked_for_Death</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Q119704</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/The_Father_(1996...</td>\n",
+       "      <td>Q82860</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/The_Italian_Brig...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Q120484</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Fair_Game_(1995_...</td>\n",
+       "      <td>Q82937</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Agent_077:_From_...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -156,22 +156,22 @@
       ],
       "text/plain": [
        "      film                                               link\n",
-       "0  Q119889  https://en.wikipedia.org/wiki/Aliens_in_the_Attic\n",
-       "1  Q121810     https://en.wikipedia.org/wiki/Grown_Ups_(film)\n",
-       "2  Q120626  https://en.wikipedia.org/wiki/Song_of_the_Thin...\n",
-       "3  Q119704  https://en.wikipedia.org/wiki/The_Father_(1996...\n",
-       "4  Q120484  https://en.wikipedia.org/wiki/Fair_Game_(1995_..."
+       "0  Q108946       https://en.wikipedia.org/wiki/A_Few_Good_Men\n",
+       "1  Q108586  https://en.wikipedia.org/wiki/The_Proposal_(20...\n",
+       "2  Q109110     https://en.wikipedia.org/wiki/Marked_for_Death\n",
+       "3   Q82860  https://en.wikipedia.org/wiki/The_Italian_Brig...\n",
+       "4   Q82937  https://en.wikipedia.org/wiki/Agent_077:_From_..."
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "source": [
     "# parse cast lists, including pulling actor wikidata links where possible.\n",
     "\n",
@@ -231,31 +231,76 @@
        "      <th></th>\n",
        "      <th>wikipedia_actor</th>\n",
        "      <th>character_name</th>\n",
+       "      <th>wikidata_actor</th>\n",
+       "      <th>wikidata_film</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/wiki/Louis_Garrel</td>\n",
+       "      <td>Ismaël Bénoliel</td>\n",
+       "      <td>Q382393</td>\n",
+       "      <td>Q1062362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/wiki/Ludivine_Sagnier</td>\n",
+       "      <td>Julie Pommeraye</td>\n",
+       "      <td>Q233742</td>\n",
+       "      <td>Q1062362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/wiki/Clotilde_Hesme</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Q275664</td>\n",
+       "      <td>Q1062362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/wiki/Gr%C3%A9goire_Leprince-Ringuet</td>\n",
+       "      <td>Erwann</td>\n",
+       "      <td>Q1551551</td>\n",
+       "      <td>Q1062362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/wiki/Chiara_Mastroianni</td>\n",
+       "      <td>Jeanne</td>\n",
+       "      <td>Q283317</td>\n",
+       "      <td>Q1062362</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [wikipedia_actor, character_name]\n",
-       "Index: []"
+       "                        wikipedia_actor   character_name wikidata_actor  \\\n",
+       "0                    /wiki/Louis_Garrel  Ismaël Bénoliel        Q382393   \n",
+       "1                /wiki/Ludivine_Sagnier  Julie Pommeraye        Q233742   \n",
+       "2                  /wiki/Clotilde_Hesme            Alice        Q275664   \n",
+       "3  /wiki/Gr%C3%A9goire_Leprince-Ringuet           Erwann       Q1551551   \n",
+       "4              /wiki/Chiara_Mastroianni           Jeanne        Q283317   \n",
+       "\n",
+       "  wikidata_film  \n",
+       "0      Q1062362  \n",
+       "1      Q1062362  \n",
+       "2      Q1062362  \n",
+       "3      Q1062362  \n",
+       "4      Q1062362  "
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "source": [
-    "import pathlib, pandas, numpy, datetime, os\n",
-    "\n",
     "# group data by extraction date, plus last minute filtering and formatting.\n",
     "\n",
     "data_path = pathlib.Path.cwd() / 'data'\n",
@@ -271,9 +316,7 @@
     "    daily = daily.loc[daily.timestamp.isin([x])]\n",
     "    comp = pandas.DataFrame()\n",
     "    for y in daily.location.unique():\n",
-    "\n",
     "        comp = pandas.concat([comp, pandas.read_csv(str(y))])\n",
-    "     \n",
     "\n",
     "    comp = comp.loc[comp.wikidata_actor.str.contains('Q', na=False)]\n",
     "    comp['character_name'] = comp.apply(character_length, axis=1)\n",
@@ -306,18 +349,11 @@
       "2021-12-09.txt 4 53\n",
       "2021-12-10.txt 1244 14077\n",
       "2021-12-11.txt 2936 32864\n",
-      "2021-12-12.txt 3382 37226\n",
-      "2021-12-13.txt 407 4010\n"
+      "2021-12-12.txt 3380 37226\n",
+      "2021-12-13.txt 860 8807\n"
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
